# AutoSlicer-v2

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  logs_emb.txt  logs_pseudo.txt  logs_sep0.txt  logs_sep1.txt  logs_sep2.txt  logs_synth.txt  logs_train_crnn.txt  logs_train_gold_crnn.txt  logs_train_gold_tcn.txt  logs_train_panns_head.txt  logs_train_tcn.txt  pyproject.toml  requirements.txt
notes/: DESIGN.md  RESEARCH.md  WORKLOG.md  research_raw.json
reports/: FINAL_REPORT.md
scripts/: build_manifests.py  build_v2_labels.py  cache_features.py  cache_fullband.py  cache_panns_emb.py  eval_dump.py  eval_test.py  extract_dataset.py  extract_partial.py  gold_azusa.py  make_synthetic.py  pseudo_label.py  separate_all.py  tune_postprocess.py
src/: bilibili.py  dataset.py  features.py  infer.py  metrics.py  models.py  panns.py  postprocess.py  train.py
